Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78441

Text disappears when using a U+FFFC unicode character

XMLWordPrintable

    • All
    • a927fcd4a (dev), 60ee43d08 (6.6), a1d35bd53 (tqtc/lts-6.5)

      Steps to reproduce:

      1. Create any TextEdit control.
      2. Type anything, and put U+FFFC character (https://www.fileformat.info/info/unicode/char/fffc/index.htm)
      3. Observe the text fade away

      When you remove U+FFFC, all text is drawn. It doesn’t matter if you use textFormat PlainText or RichText, also tested on Windows and MacOs.

      I attached qml code and video

       

        1. TextAreaPage.qml
          4 kB
          Igor Bugaev
        2. Screen Recording 2019-09-17 at 11.26.39.mov
          4.76 MB
          Igor Bugaev
        For Gerrit Dashboard: QTBUG-78441
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            freed Igor Bugaev
            Votes:
            5 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes