Fix missing paragraph containing object replacement char

If a user manually adds an object replacement char, it will not
have a corresponding object, but we would still skip the paragraph
in this case, causing the text to disappear.

[ChangeLog][Text] Fixed an issue where a paragraph containing the
Object Replacement Character (U+FFFC) would be invisible.

Pick-to: 6.5
Fixes: QTBUG-78441
Change-Id: I04a20b8287895bbed5d1f22f1a449d6dbd9d448b
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit a927fcd4ac948b3439518d1b92a717e8d7e95fed)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>